Fixed Bugs
FindBugs and Checkstyle used